2024-06-18  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.5-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.5-alpha04: D+D';git push
	git tag -a 5.2.5-alpha04 -m '';git push --tags

	* NCO 5.2.5-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.5-alpha03: Red Tide';git push
	git tag -a 5.2.5-alpha03 -m 'ncclimo: support --xcl_var tms md; ncremap: support mpasa';git push --tags

	* ncclimo: Add support for --xcl_var in timeseries mode. NB: Only works with Bash v. 4.0+

2024-06-17  Charlie Zender  <zender@uci.edu>

	* ncclimo: Add explicit ERROR message that --xcl_var does not work in timeseries mode

	* ncclimo: Fix borken drc_rgr_xtn option that interfered with --exclude

2024-06-04  Charlie Zender  <zender@uci.edu>

	* ncremap: Prevent --add_fll for prc_typ == mpasa

	* ncremap/ncclimo: Accept -P mpasa for prc_typ

	* ncremap: Replace nested dst_idx/lnk_idx loop in flg_add_fll/flg_msk_apl block by faster frc_out loop

2024-06-03  Charlie Zender  <zender@uci.edu>

	* ncremap: Splice MPAS-Atmosphere dimensions nIsoLevelsT,nIsoLevelsZ into default pdq_opt

	* ncremap: Add --pdq_opt synonym to --prm_opt

2024-05-07  Charlie Zender  <zender@uci.edu>

	* ncclimo/ncremap: print ncvis command instead of ncview command

2024-04-19  Charlie Zender  <zender@uci.edu>

	* Change MRE from 2^(-NSB) to 2^-(NSB+1) to account for implicit MSB=1

	* NCO 5.2.5-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.5-alpha02: Takumi Tonkatsu Ramen';git push
	git tag -a 5.2.5-alpha02 -m 'all: qnt_alg nm cf cv; qnt mre';git push --tags

	* Amend all docs to prefer --qnt over --ppc, mention --qnt_alg too

	* Add --qnt_alg to all numerical operators, and --qnt to those and ncremap/ncclimo as well

2024-04-18  Charlie Zender  <zender@uci.edu>

	* Add nco_qnt2baa() to support string-valued specification of NCO-implemented quantization algorithms

	* nco_qnt_mtd() add maximum relative error (MRE) to NSB methods
